[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Weapons/Weapons.gd" type="Script" id=1]
[ext_resource path="res://src/Weapons/assets/melee.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/Weapons/assets/silenced.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/Weapons/assets/dry_shoot.mp3" type="AudioStream" id=4]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Barrel_attachment" type="Sprite" parent="Sprite"]

[node name="Stock_attachment" type="Sprite" parent="Sprite"]

[node name="Melee" type="Area2D" parent="." groups=["melee"]]
collision_layer = 32
collision_mask = 4

[node name="MeleeShape" type="CollisionShape2D" parent="Melee"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Firerate" type="Timer" parent="."]
one_shot = true

[node name="Reload_timer" type="Timer" parent="."]
one_shot = true

[node name="Fire" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Silenced" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Fire_dry" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Reload_sound" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Reload_empty" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Swing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Firerate" to="." method="_on_Firerate_timeout"]
[connection signal="timeout" from="Reload_timer" to="." method="reload_finish"]
